@@ -35,10 +35,11 @@ type programTree struct {
 	CommandFn       CommandFn
 	HelpCommandName string
 	mode            Mode
-	unknownMode     UnknownMode // Unknown option mode
-	requireOrder    bool        // stop parsing args as soon as an unknown is found
-	skipOptionsCopy bool        // skips copying options from parent to child. Required when doing wrapper commands.
-	Suggestions     []string    // Suggestions used for completions
+	unknownMode     UnknownMode    // Unknown option mode
+	requireOrder    bool           // stop parsing args as soon as an unknown is found
+	skipOptionsCopy bool           // skips copying options from parent to child. Required when doing wrapper commands.
+	Suggestions     []string       // Suggestions used for completions
+	SuggestionFns   []CompletionFn // SuggestionsFns used for completions
 
 	mapKeysToLower bool // controls wether or not map keys are normalized to lowercase
 
@@ -282,6 +283,12 @@ ARGS_LOOP:
 					if strings.HasPrefix(e, iterator.Value()) {
 						completions = append(completions, e)
 					}
+				}
+			}
+			// SuggestionFns
+			{
+				for _, fn := range currentProgramNode.SuggestionFns {
+					completions = append(completions, fn(completionMode, iterator.Value())...)
 				}
 			}
 
